# Android-Kernel-Builder

./: .gitignore  AGENTS.md  README.md  install.sh  main.py  pyproject.toml
.github/workflows/: build-base.yml  build-workspace.yml
android_kernel_builder/builder/: __init__.py  build.py  cli.py  global_config.py  layout.py  usage_report.py  utils.py
android_kernel_builder/docker/: base.Dockerfile  entrypoint.sh  install-base-deps.sh  snapshot.Dockerfile  workspace.Dockerfile
android_kernel_builder/docs/: akb-cli.md  configuration.md  environment-variables.md  faq.md  image-files.md  manifest-modes.md
android_kernel_builder/scripts/: write-ci-build-summary.py
android_kernel_builder/tests/: test_build.py  test_build_cache.py  test_build_systems.py  test_ci_build_summary.py  test_cli.py  test_code_sync.py  test_docker.py  test_global_config.py  test_image_env.py  test_image_package.py  test_layout.py  test_snapshot.py  test_target_store.py  test_targets.py
configs/: global.toml
configs/targets/: android12-5.10-2025-09.toml  android12-5.10.toml  android13-5.10.toml  android13-5.15.toml  android14-5.15.toml  android14-6.1.toml  android15-6.6.toml  android16-6.12.toml  avd-android14-6.1-x64.toml  avd-android15-6.6-arm64.toml  avd-android15-6.6-x64.toml  avd-android16-6.12-x64.toml  avd-base.toml  kleaf-base.toml  legacy-base.toml
docker/: base.Dockerfile  entrypoint.sh  runtime-prepared.Dockerfile  snapshot.Dockerfile  workspace.Dockerfile
docs/: configuration.md  environment-variables.md  gki-builder-cli.md  image-files.md  manifest-modes.md
examples/: consumer-github-actions.yml
scripts/: bootstrap.sh  build.sh  package-image.py  strip-snapshot.py  sync.sh  warmup-cache.sh  write-ci-build-summary.py
tests/: test_active_target.py  test_build.py  test_build_systems.py  test_cli.py  test_config.py  test_docker.py  test_docker_cache_sync.py  test_environment.py  test_global_config.py  test_image_env.py  test_image_package.py  test_install_script.py  test_layout.py  test_runtime_cache.py  test_snapshot.py  test_target_store.py  test_targets.py  test_workspace.py
(+114 files in other folders)
