[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gki-builder"
version = "0.1.0"
description = "Reusable GKI workspace and build orchestration"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = []
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.scripts]
gki-builder = "gki_builder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
