[project]
name = "android-kernel-builder"
version = "0.0.1"
description = "Reusable GKI workspace and build orchestration"
readme = "README.md"
requires-python = ">=3.11"
license-files = ["LICENSE"]
authors = [{ name = "u9521" }]
dependencies = []

[project.scripts]
akb = "android_kernel_builder.builder.cli.app:main"

[build-system]
requires = ["uv_build>=0.11.27,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
